--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-fileupload": "^1.2.1",
     "express-formidable": "^1.2.0",
     "fs.extra": "^1.3.2",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "simple-node-logger": "^21.8.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
