--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "simple-node-logger": "^21.8.12"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-formidable": "^1.2.0",
     "@types/node": "^16.10.1"
   }
 }
